--- a/events.html
+++ b/events.html
@@ -147,12 +147,34 @@
           </div>
         </div>
       </div>
-      <div class="contact-info mt-5">
+      <div class="contact mt-5">
         <h5>Connect with Us</h5>
         <i class="fab fa-instagram contact-icon"></i>
         <i class="fab fa-facebook contact-icon"></i>
         <i class="fab fa-twitter contact-icon"></i>
       </div>
+      <footer class="source-links">
+        Contact me:
+        <a href="mailto:nili.philipp@gmail.com">Nili.Philipp@gmail.com</a>
+        <div>
+          View source at
+          <a
+            href="https://github.com/NiliPilipp/Candidate-Website"
+            title="Source on Github"
+            target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+        <div>
+          View served page at
+          <a
+            href="https://affectionate-feynman-459bba.netlify.app/"
+            title="Link to Netlify"
+            target="_blank"
+            ><img src="images/netlify.png" width="18px" height="18px"
+          /></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
