--- a/index.html
+++ b/index.html
@@ -130,23 +130,30 @@
         <i class="fab fa-twitter contact-icon"></i>
       </div>
 
-      <div class="source-links">
-        Netlify link at
+      <footer class="source-links">
+        Contact me: 
+        <a href="mailto:nili.philipp@gmail.com">Nili.Philipp@gmail.com</a>
+        <div>
+        View source at
+        <a
+          href="https://github.com/NiliPilipp/Candidate-Website"
+          title="Source on Github"
+          target="_blank"
+          ><i class="fab fa-github"></i></a
+        >
+        </div>
+        <div>View served page at
         <a
           href="https://affectionate-feynman-459bba.netlify.app/"
           title="Link to Netlify"
           target="_blank"
-          >Netlify</a
+          
+          ><img src="images/netlify.png" width="18px"
+          height="18px"
+         ></a
         >
-
-        Github link at
-        <a
-          href="https://github.com/NiliPilipp/Candidate-Website"
-          title="Link to Github"
-          target="_blank"
-          >Github</a
-        >
-      </div>
+        </div>        
+      </footer>
     </div>
   </body>
 </html>
