--- a/team.html
+++ b/team.html
@@ -74,7 +74,7 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link mx-5 px-5 active"
+                      class="nav-link mx-5 px-5"
                       href="events.html"
                       title="Jane Does' upcoming events"
                       >Events</a
@@ -128,8 +128,8 @@
           <div class="col-sm-6 justify-content-center mt-5 team-content">
           <img
             src="images/Alice Smith.jpg"
-            class="img-fluid rounded d-sm-block mb-3"
             alt="Alice Smith"
+            class="img-fluid rounded d-sm-block mb-3"
           />
           <h4>Alice Smith</h4>
           <p class="team-text mb-4 mt-3">
@@ -161,23 +161,28 @@
             </div>
         </div>
       </div>
-      <div class="source-links text-center">
-        Netlify link at
-        <a
-          href="https://affectionate-feynman-459bba.netlify.app/"
-          title="Link to Netlify"
-          target="_blank"
-          >Netlify</a
-        >
-
-        Github link at
-        <a
-          href="https://github.com/NiliPilipp/Candidate-Website"
-          title="Link to Github"
-          target="_blank"
-          >Github</a
-        >
-      </div>
+      <footer class="source-links">
+        Contact me:
+        <a href="mailto:nili.philipp@gmail.com">Nili.Philipp@gmail.com</a>
+        <div>
+          View source at
+          <a
+            href="https://github.com/NiliPilipp/Candidate-Website"
+            title="Source on Github"
+            target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+        <div>
+          View served page at
+          <a
+            href="https://affectionate-feynman-459bba.netlify.app/"
+            title="Link to Netlify"
+            target="_blank"
+            ><img src="images/netlify.png" width="18px" height="18px"
+          /></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
